Wed May 25 00:21:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (XCFLAGS): merge flags only for ruby itself from
	  ruby_cflags.

Tue May 24 22:04:15 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_cipher.c (ossl_cipher_set_key, ossl_cipher_set_iv):
	  Reject too long values as well as too short ones. Currently they
	  just truncate the input but this would hide bugs and lead to
	  unexpected encryption/decryption results.

	* test/openssl/test_cipher.rb: Test that Cipher#key= and #iv= reject
	  Strings with invalid length.

Tue May 24 21:32:21 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): Use
	  ASN1_OCTET_STRING_set() instead of M_ASN1_OCTET_STRING_set(). Macros
	  prefixed by "M_" are discouraged to be used from outside OpenSSL
	  library[1].
	  (ossl_x509ext_get_value): Likewise, use ASN1_STRING_print() instead
	  of M_ASN1_OCTET_STRING_print().
	  [1] https://git.openssl.org/gitweb/?p=openssl.git;a=blob;f=CHANGES;h=bf61913d7b01212b4d8b2f3c13d71d645914f67c;hb=b6079a7835f61daa9fb2cbf9addfa86049523933#l878

	* ext/openssl/ossl.h: Include openssl/asn1.h instead of
	  openssl/asn1_mac.h. It just includes openssl/asn1.h and defines some
	  additional "M_" macros.

Tue May 24 18:52:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_verify): verify the format to
	  scan if no invalid chars and variable argument length matching,
	  at the compile time if possible.

Tue May 24 17:18:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/defines.h (ERRORFUNC, WARNINGFUNC): add fallback
	  definitions.

Tue May 24 16:37:43 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (ruby_cflags): separate from optflags [Bug #12409]
	  -fexcess-precision=standard and -fp-model precise are set to this now.

	* configure.in (cflags): use ruby_cflags.

Tue May 24 16:20:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
